# lenstest

./: .gitignore  .pages-ping  .testignore  CHANGELOG.rst  CITATION.cff  LICENSE.txt  MANIFEST.in  Makefile  README.rst  jupyter-lite.json  jupyter_lite_config.json  pyproject.toml  release.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_all_notebooks.py
.github/scripts/: update_citation.py
.github/workflows/: citation.yaml  pypi.yaml  test.yaml  test.yml
api/contents/: all.json
docs/: conf.py  foucault-dynamic.ipynb  foucault.ipynb  index.rst  lenstest.rst  make_readme_images.py  requirements.txt  ronchi-basic.ipynb  ronchi-dynamic.ipynb  ronchi-origin.ipynb  ronchi-upton.ipynb  ronchi.ipynb  sagitta.ipynb
files/: foucault-dynamic.ipynb  foucault.ipynb  ronchi-basic.ipynb  ronchi-dynamic.ipynb  ronchi-origin.ipynb  ronchi-upton.ipynb  ronchi.ipynb  sagitta.ipynb
lenstest/: __init__.py  foucault.py  lenstest.py  ronchi.py
pypi/: all.json  lenstest-1.0.0-py3-none-any.whl
tests/: test_all_notebooks.py  test_foucault.py  test_lenstest.py  test_ronchi.py
