[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
ignore = ["F403", "F401"]
exclude =['.git', '__pycache__', 'docs', 'aket6.py']

[tool.check-manifest]
ignore = [
    ".readthedocs.yaml",
    "docs/*",
    "Makefile",
    "release.txt",
    "requirements.txt",
    "todo.rst",
]
