[bdist_wheel]
universal=1

[metadata]
name = lenstest
version = 0.3.2
author = Scott Prahl
author_email = scott.prahl@oit.edu
url = https://github.com/scottprahl/lenstest.git
license = MIT
description = Routines for analysis of non-interfometric wavefront testing.
keywords =
    Ronchi
    Foucault
    Knife Edge
    Ronchigram
    Foucaugram
    fringe
    lens
    mirror
    parabolic
    hyperbolic
    paraboloid
    hyperboloid
    oblate spheroid
    prolate spheroid

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = lenstest
install_requires = numpy; matplotlib
python_requires = >=3.4
zip_safe = True
setup_requires = setuptools>=44
