[metadata]
description = Routines for analysis of non-interfometric wavefront testing.

keywords =
    Ronchi
    Foucault
    Knife Edge
    Ronchigram
    Foucaugram
    fringe
    lens
    mirror
    parabolic
    hyperbolic
    paraboloid
    hyperboloid
    oblate spheroid
    prolate spheroid

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = lenstest
install_requires = numpy; matplotlib
python_requires = >=3.4
setup_requires = setuptools>=44

[flake8]
ignore = W503, D212, N802, N803, N806
per-file-ignores = 
    __init__.py:F401,F403
    setup.py:D100
exclude =
    .git,
    __pycache__,
    docs
max-line-length = 99
docstring-convention = google
